--- a/笔记.md
+++ b/笔记.md
@@ -111,28 +111,14 @@ print(timeit.timeit('(1, 2, 3, 4, 5, 6, 7, 8, 9)'))
 """
 录入5个学生3门课程的考试成绩
 计算每个学生的平均分和每门课的平均分
+range(几)就是几个数
 """
-names = ['关羽', '张飞', '赵云', '马超', '黄忠']
-courses = ['语文', '数学', '英语']
-# 用生成式创建嵌套的列表保存5个学生3门课程的成绩
-scores = [[0] * len(courses) for _ in range(len(names))]
-# 录入数据
-for i, name in enumerate(names):
-    print(f'请输入{name}的成绩 ===>')
-    for j, course in enumerate(courses):
-        scores[i][j] = float(input(f'{course}: '))
-print()
-print('-' * 5, '学生平均成绩', '-' * 5)
-# 计算每个人的平均成绩
-for index, name in enumerate(names):
-    avg_score = sum(scores[index]) / len(courses)
-    print(f'{name}的平均成绩为: {avg_score:.1f}分')
-print()
-print('-' * 5, '课程平均成绩', '-' * 5)
-# 计算每门课的平均成绩
-for index, course in enumerate(courses):
-    # 用生成式从scores中取出指定的列创建新列表
-    curr_course_scores = [score[index] for score in scores]
-    avg_score = sum(curr_course_scores) / len(names)
-    print(f'{course}的平均成绩为：{avg_score:.1f}分')
 ```
+### 实现双色球随机选号。
+说明：，红球号码范围为01～33，蓝球号码范围为01～16。双色球每期从33个红球中开出6个号码，从16个蓝球中开出1个号码作为中奖号码，双色球玩法即是竞猜开奖号码的6个红球号码和1个蓝球号码。
+
+思路是用一个列表保存红色球的号码，然后通过random模块的sample函数实现无放回抽样，这样就可以抽中6个不重复的红色球号码。红色球需要排序，可以使用列表的sort方法，显示的时候一位数前面需要做补0的操作，可以用字符串格式化的方式来处理。
+
+
+
+
