--- a/笔记.md
+++ b/笔记.md
@@ -119,6 +119,7 @@ range(几)就是几个数
 
 思路是用一个列表保存红色球的号码，然后通过random模块的sample函数实现无放回抽样，这样就可以抽中6个不重复的红色球号码。红色球需要排序，可以使用列表的sort方法，显示的时候一位数前面需要做补0的操作，可以用字符串格式化的方式来处理。
 
-
-
-
+## 集合
+1. **无序性**
+2. **互异性**
+3. **确定性**
