linux 西班牙键盘太难适应了

--- a/笔记.md
+++ b/笔记.md
@@ -123,3 +123,5 @@ range(几)就是几个数
 1. **无序性**
 2. **互异性**
 3. **确定性**
+## 字典
+特别提醒大家注意的是，字典中的键必须是不可变类型，例如整数（int）、浮点数（float）、字符串（str）、元组（tuple）等类型的值；显然，列表（list）和集合（set）是不能作为字典中的键的，当然字典类型本身也不能再作为字典中的键，因为字典也是可变类型
