学习进度更新

--- a/笔记.md
+++ b/笔记.md
@@ -125,3 +125,30 @@ range(几)就是几个数
 3. **确定性**
 ## 字典
 特别提醒大家注意的是，字典中的键必须是不可变类型，例如整数（int）、浮点数（float）、字符串（str）、元组（tuple）等类型的值；显然，列表（list）和集合（set）是不能作为字典中的键的，当然字典类型本身也不能再作为字典中的键，因为字典也是可变类型
+
+## 面向对象
+self.__name = name 私有属性
+@property 属性访问器
+@name.setter 属性修改器
+__slots__ = ('name', 'age') 固定属性不允许添加属性
+@staticmethod   修饰器---类的静态方法
+定义方法：对象方法，类方法和静态方法
+super().__init__(name, age)继承（实现类代码复用）和多态
+将子类对象去掉父类对象---里式替换原则
+##pycharm
+格式化代码这个菜单项对应的快捷键是alt+command+L
+下表列出了一些PyCharm中特别常用的快捷键，当然如果愿意，也可以通过设置窗口中“Keymap”菜单项自定义快捷键，PyCharm本身也针对不同的操作系统和使用习惯对快捷键进行了分组。
+
+| 快捷键                                        | 作用                                   |
+| --------------------------------------------- | -------------------------------------- |
+| `command + j`                                 | 显示可用的代码模板                     |
+| `command + b`                                 | 查看函数、类、方法的定义               |
+| `ctrl + space`                                | 万能代码提示快捷键，一下不行按两下     |
+| `command + alt + l`                           | 格式化代码                             |
+| `alt + enter`                                 | 万能代码修复快捷键                     |
+| `ctrl + /`                                    | 注释/反注释代码                        |
+| `shift + shift`                               | 万能搜索快捷键                         |
+| `command + d` / `command + y`                 | 复制/删除一行代码                      |
+| `command + shift + -` / `command + shift + +` | 折叠/展开所有代码                      |
+| `F2`                                          | 快速定位到错误代码                     |
+| `command+ alt + F7`                           | 查看哪些地方用到了指
